--- a/package.json
+++ b/package.json
@@ -137,6 +137,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      ["import", {"libraryName": "antd-mobile", "style": true}]
     ]
   },
   "devDependencies": {
@@ -148,4 +151,6 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1"
   }
+  
+
 }
