--- a/package.json
+++ b/package.json
@@ -150,6 +150,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1"
+  },
+    "theme": {
+	  "brand-primary": "red",
+	  "color-text-base":  "#333"
   }
   
 
