--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
+    "source-map-explorer": "^2.0.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.2",
@@ -77,7 +78,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "analyze-src": "source-map-explorer build/static/js/main.*",
+   "analyze-all": "source-map-explorer build/static/js/*"
   },
   "eslintConfig": {
     "extends": "react-app"
