--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
         "import",
         {
           "libraryName": "antd-mobile",
-          "style": true
+          "style": "css"
         }
       ]
     ]
