--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
+    "antd": "^3.23.2",
+    "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "babel-eslint": "10.0.2",
     "babel-jest": "^24.8.0",
@@ -80,7 +82,7 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "analyze-src": "source-map-explorer build/static/js/main.*",
-   "analyze-all": "source-map-explorer build/static/js/*"
+    "analyze-all": "source-map-explorer build/static/js/*"
   },
   "eslintConfig": {
     "extends": "react-app"
