--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-lazy-load": "^3.0.13",
     "react-lazyload": "^2.6.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
