--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-dom": "^16.9.0",
     "react-lazy-load": "^3.0.13",
     "react-lazyload": "^2.6.2",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
